# BirdCLEF-2025

./: README.md  args.py  inference.py  main.py  model.py  pyproject.toml  run.sh  test.py  train.py  utils.py  valid.py
