[project]
name = "birdclef-2025-challenge"
version = "0.1.0"
description = "Kaggle BirdCLEF 2025 audio classification solution using PyTorch and EfficientNet"
authors = [
    {name = "Jirsak Buranathawornsom", email = "wan.jirasak@gmail.com"},
    {name = "Pasit Tiwawongrut", email = "maxkung55@gmail.com"},
    {name = "Todsavad Tangtortan", email = "todsavadt@gmail.comm"},
]
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "torch>=2.0",
    "torchaudio>=2.0",
    "timm>=0.9.2",
    "librosa>=0.10.0",
    "scikit-learn>=1.3.0",
    "pandas>=1.5.0",
    "numpy>=1.23.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "opencv-python>=4.8.0",
    "tqdm>=4.65.0",
]

[tool.setuptools]
packages = ["."]
